--- a/style.css
+++ b/style.css
@@ -65,6 +65,34 @@ body {
     width: 100%;
 }
 
+.header__list__ham {
+    position: fixed;
+    top: -300px;
+    left: 0;
+    width: 100%;
+    height: 150px;
+    background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+    padding-top: 100px;
+    transition: .5s;
+    z-index: 2;
+}
+
+.header__list__ham-item a {
+    font-size: 18px;
+    color: #fff;
+    padding: 0px 10px;
+    text-decoration: none;
+    cursor: pointer;
+    position: relative;
+}
+
+.come {
+    top: 0px;
+}
+
 /* --------------------------------------------------------------INTRODUCTION--------------------------------------------------------------- */
 
 .introduction {
@@ -557,23 +585,7 @@ footer {
 
 @media(max-width: 550px) {
     .header__list {
-        margin-right: 0;
-        justify-content: center;
-        position: fixed;
-        height: 120px;
-        width: 100%;
-        top: -120px;
-        left: 0;
-        transition: .3s;
-        background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
-        align-items: flex-end;
-        z-index: 2;
-        padding: 30px 0;
-    }
-    
-    .header__list-item a {
-        font-size: 20px;
-        padding: 10px 10px;
+        opacity: 0;
     }
     .header__menu-ham {
         position: fixed;
@@ -590,9 +602,6 @@ footer {
     }
     .header__menu-ham i {
         font-size: 34px;
-    }
-    .come {
-        top: 0;
     }  
     .show {
         display: block !important;
