add new learned technologies

--- a/style.css
+++ b/style.css
@@ -237,6 +237,14 @@ i {
     color: #F1502F;
 }
 
+.fa-npm:hover {
+    color: #cb3837;
+}
+
+.fa-bootstrap:hover {
+    color: #563d7c;
+}
+
 /* --------------------------------------------------------------PROJECTS--------------------------------------------------------------- */
 
 .projects {
